RESOLVED FIXED114822
StorageAreaMaps should not assume that a zero storage namespace ID is used for local storage
https://bugs.webkit.org/show_bug.cgi?id=114822
Summary StorageAreaMaps should not assume that a zero storage namespace ID is used fo...
Anders Carlsson
Reported 2013-04-18 11:28:40 PDT
StorageAreaMaps should not assume that a zero storage namespace ID is used for local storage
Attachments
Patch (3.19 KB, patch)
2013-04-18 11:30 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2013-04-18 11:30:12 PDT
Anders Carlsson
Comment 2 2013-04-18 11:33:03 PDT
Note You need to log in before you can comment on or make changes to this bug.