StorageAreaMaps should not assume that a zero storage namespace ID is used for local storage https://bugs.webkit.org/show_bug.cgi?id=114822

Reviewed by Beth Dakin.

Store the storage type directly in the storage area map.

* WebProcess/Storage/StorageAreaMap.cpp:
(WebKit::StorageAreaMap::StorageAreaMap):
* WebProcess/Storage/StorageAreaMap.h:
(WebKit::StorageAreaMap::storageType):

Canonical link: https://commits.webkit.org/133213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148692 268f45cc-cd09-0410-ab3c-d52691b4dbfc